@@ -164,3 +164,4 @@ v 1.9:
 v 2.0:
 	- Fix GM reporting of permission inheritance to retain the correct order. Lower inheritance groups can no longer negate a higher groups permissions.
 	- Fix an error I caused trying to modify an unmodifiable list when parsing '*' permissions.
+	- Don't throw errors when attempting to remove permission attachments (bukkit will have already removed it).
